--- a/ivy/org.muhkuh.tools.muhkuh_base_cli/ivy.xml
+++ b/ivy/org.muhkuh.tools.muhkuh_base_cli/ivy.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <ivy-module version="2.0">
-	<info organisation="org.muhkuh.tools" module="muhkuh_base_cli" revision="${VERSION_FULL}">
+	<info organisation="org.muhkuh.tools"
+	      module="muhkuh_base_cli"
+	      revision="${PROJECT_VERSION}"
+	      e:vcs-id="${PROJECT_VERSION_VCS}">
 		<license name="GPL-2.0"/>
 		<ivyauthor name="Muhkuh team" url="https://github.com/muhkuh-sys" />
 		<description>
@@ -12,9 +15,9 @@
 		<artifact ext="zip" type="zip" packaging="zip" />
 	</publications>
 	<dependencies>
-		<dependency org="org.muhkuh.tools" name="lua"                  rev="${VERSION_FULL}"/>
-		<dependency org="org.muhkuh.tools" name="lua_plugin_bit"       rev="${VERSION_FULL}"/>
-		<dependency org="org.muhkuh.tools" name="lua_plugin_mhash"     rev="${VERSION_FULL}"/>
-		<dependency org="org.muhkuh.tools" name="lua_plugin_romloader" rev="${VERSION_FULL}"/>
+		<dependency org="org.muhkuh.lua" name="lua51"           rev="5.1.3"/>
+		<dependency org="org.muhkuh.lua" name="lua51-bit"       rev="0.1.1"/>
+		<dependency org="org.muhkuh.lua" name="lua51-mhash"     rev="0.9.2"/>
+		<dependency org="org.muhkuh.lua" name="lua51-romloader" rev="2.2.0"/>
 	</dependencies>
 </ivy-module>
