Add namespace for ivy extra tags.

--- a/ivy/org.muhkuh.tools.muhkuh_base_cli/ivy.xml
+++ b/ivy/org.muhkuh.tools.muhkuh_base_cli/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<ivy-module version="2.0">
+<ivy-module version="2.0" xmlns:e="http://ant.apache.org/ivy/extra">
 	<info organisation="org.muhkuh.tools"
 	      module="muhkuh_base_cli"
 	      revision="${PROJECT_VERSION}"
