--- a/ivy/org.muhkuh.tools.muhkuh_base_cli/ivy.xml
+++ b/ivy/org.muhkuh.tools.muhkuh_base_cli/ivy.xml
@@ -16,8 +16,8 @@
 	</publications>
 	<dependencies>
 		<dependency org="org.muhkuh.lua" name="lua51"           rev="5.1.5"/>
-		<dependency org="org.muhkuh.lua" name="lua51-bit"       rev="0.1.2"/>
-		<dependency org="org.muhkuh.lua" name="lua51-mhash"     rev="0.9.3"/>
-		<dependency org="org.muhkuh.lua" name="lua51-romloader" rev="2.2.2"/>
+		<dependency org="org.luajit"     name="bitop"           rev="1.0.2"/>
+		<dependency org="org.muhkuh.lua" name="lua51-mhash"     rev="0.9.4"/>
+		<dependency org="org.muhkuh.lua" name="lua51-romloader" rev="2.3.0"/>
 	</dependencies>
 </ivy-module>
